Compile with java 7 and pull dependencies forward.